--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,72 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["airbnb-typescript"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": [
+    "react",
+    "import",
+    "lodash",
+    "react-hooks"
+  ],
+  "env": {
+    "browser": true
+  },
+  "settings": {
+    "import/parser": "babel-eslint",
+    "import/resolver": {
+      "node": {
+        "paths": ["./src"]
+      }
+    },
+    "react": {
+      "version": "detect"
+    }
+  },
+  "rules": {
+    "arrow-parens": [2, "always"],
+    "curly": [2, "all"],
+    "lodash/prefer-lodash-method": [2, {
+      "ignoreMethods": ["map", "replace", "split", "toUpper", "toLower", "trim"]
+    }],
+    "max-len": [2, 100, 2, {
+      "ignoreUrls": true,
+      "ignoreComments": true,
+      "ignoreRegExpLiterals": true,
+      "ignoreStrings": true,
+      "ignoreTemplateLiterals": true
+    }],
+    "radix": 0,
+    "react/jsx-filename-extension": [2, {
+      "extensions": [".ts", ".tsx"]
+    }],
+    "react/no-typos": [1],
+    "react/destructuring-assignment": [0],
+    "react/jsx-fragments": [1],
+    "jsx-a11y/no-static-element-interactions": [0],
+    "jsx-a11y/click-events-have-key-events": [0],
+    "jsx-a11y/anchor-is-valid": [0],
+    "import/prefer-default-export": [0],
+    "react/jsx-props-no-spreading": [0],
+    "prefer-destructuring": ["error", {
+      "array": false
+    }],
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "let", "next": "return" },
+      { "blankLine": "always", "prev": "const", "next": "return" },
+      { "blankLine": "always", "prev": "block-like", "next": "block-like" }
+    ],
+    "no-console": [1],
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "import/order": [
+      2,
+      {
+        "groups": [["builtin", "external"], "internal", ["sibling", "parent"]],
+        "newlines-between": "always-and-inside-groups"
+      }
+    ]
+  }
 }
